// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wizard Move back on disabled make first invalid so move back there 1`] = `
"<OuterWrapper state={{...}} disabledTabs={false} __childrenCreator={[Function (anonymous)]} intl={{...}}>
  <Wizard wizardState={{...}} disableTabs={false}>
    <Wrapper manager={{...}} tag="section" style={{...}} className="wizard-steps">
      <section style={{...}} className="wizard-steps">
        <WizardTabList wizardState={{...}} disableTabs={false}>
          <TabList tag="div" className="wizard-index">
            <div role="tablist" className="wizard-index">
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={true} className="wizard-index-label is-current is-accessible" style={{...}} id="tab1" role="tab">
                    <span id="tab1" tabIndex={0} onFocus={[Function: bound ]} role="tab" aria-selected={true} aria-controls="tab1-panel" className="wizard-index-label is-current is-accessible" style={{...}}>
                      Label1
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label" style={{...}} id="tab2" role="tab">
                    <span id="tab2" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab2-panel" className="wizard-index-label" style={{...}}>
                      Label2
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label" style={{...}} id="tab3" role="tab">
                    <span id="tab3" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab3-panel" className="wizard-index-label" style={{...}}>
                      Label3
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
            </div>
          </TabList>
        </WizardTabList>
        <div className="modal-body">
          <form onSubmit={[Function (anonymous)]}>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab1" active={true} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab1-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={false} aria-describedby="tab1">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab2" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab2-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab2">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab3" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab3-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab3">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
          </form>
        </div>
      </section>
    </Wrapper>
  </Wizard>
</OuterWrapper>"
`;

exports[`Wizard Move back on disabled make first invalid so move back there 2`] = `
"<OuterWrapper state={{...}} disabledTabs={false} __childrenCreator={[Function (anonymous)]} intl={{...}}>
  <Wizard wizardState={{...}} disableTabs={false}>
    <Wrapper manager={{...}} tag="section" style={{...}} className="wizard-steps">
      <section style={{...}} className="wizard-steps">
        <WizardTabList wizardState={{...}} disableTabs={false}>
          <TabList tag="div" className="wizard-index">
            <div role="tablist" className="wizard-index">
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={true} className="wizard-index-label is-current is-accessible" style={{...}} id="tab1" role="tab">
                    <span id="tab1" tabIndex={0} onFocus={[Function: bound ]} role="tab" aria-selected={true} aria-controls="tab1-panel" className="wizard-index-label is-current is-accessible" style={{...}}>
                      Label1
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label" style={{...}} id="tab2" role="tab">
                    <span id="tab2" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab2-panel" className="wizard-index-label" style={{...}}>
                      Label2
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label" style={{...}} id="tab3" role="tab">
                    <span id="tab3" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab3-panel" className="wizard-index-label" style={{...}}>
                      Label3
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
            </div>
          </TabList>
        </WizardTabList>
        <div className="modal-body">
          <form onSubmit={[Function (anonymous)]}>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab1" active={true} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab1-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={false} aria-describedby="tab1">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab2" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab2-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab2">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab3" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab3-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab3">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
          </form>
        </div>
      </section>
    </Wrapper>
  </Wizard>
</OuterWrapper>"
`;

exports[`Wizard Move back on disabled make second invalid so move back there 1`] = `
"<OuterWrapper state={{...}} disabledTabs={false} __childrenCreator={[Function (anonymous)]} intl={{...}}>
  <Wizard wizardState={{...}} disableTabs={false}>
    <Wrapper manager={{...}} tag="section" style={{...}} className="wizard-steps">
      <section style={{...}} className="wizard-steps">
        <WizardTabList wizardState={{...}} disableTabs={false}>
          <TabList tag="div" className="wizard-index">
            <div role="tablist" className="wizard-index">
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label is-accessible" style={{...}} id="tab1" role="tab">
                    <span id="tab1" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab1-panel" className="wizard-index-label is-accessible" style={{...}}>
                      Label1
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={true} className="wizard-index-label is-current is-accessible" style={{...}} id="tab2" role="tab">
                    <span id="tab2" tabIndex={0} onFocus={[Function: bound ]} role="tab" aria-selected={true} aria-controls="tab2-panel" className="wizard-index-label is-current is-accessible" style={{...}}>
                      Label2
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label" style={{...}} id="tab3" role="tab">
                    <span id="tab3" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab3-panel" className="wizard-index-label" style={{...}}>
                      Label3
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
            </div>
          </TabList>
        </WizardTabList>
        <div className="modal-body">
          <form onSubmit={[Function (anonymous)]}>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab1" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab1-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab1">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab2" active={true} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab2-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={false} aria-describedby="tab2">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab3" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab3-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab3">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
          </form>
        </div>
      </section>
    </Wrapper>
  </Wizard>
</OuterWrapper>"
`;

exports[`Wizard first tab is active 1`] = `
"<OuterWrapper state={{...}} disabledTabs={false} __childrenCreator={[Function (anonymous)]} intl={{...}}>
  <Wizard wizardState={{...}} disableTabs={false}>
    <Wrapper manager={{...}} tag="section" style={{...}} className="wizard-steps">
      <section style={{...}} className="wizard-steps">
        <WizardTabList wizardState={{...}} disableTabs={false}>
          <TabList tag="div" className="wizard-index">
            <div role="tablist" className="wizard-index">
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={true} className="wizard-index-label is-current is-accessible" style={{...}} id="tab1" role="tab">
                    <span id="tab1" tabIndex={0} onFocus={[Function: bound ]} role="tab" aria-selected={true} aria-controls="tab1-panel" className="wizard-index-label is-current is-accessible" style={{...}}>
                      Label1
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label is-accessible" style={{...}} id="tab2" role="tab">
                    <span id="tab2" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab2-panel" className="wizard-index-label is-accessible" style={{...}}>
                      Label2
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label is-accessible" style={{...}} id="tab3" role="tab">
                    <span id="tab3" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab3-panel" className="wizard-index-label is-accessible" style={{...}}>
                      Label3
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
            </div>
          </TabList>
        </WizardTabList>
        <div className="modal-body">
          <form onSubmit={[Function (anonymous)]}>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab1" active={true} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab1-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={false} aria-describedby="tab1">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab2" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab2-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab2">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab3" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab3-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab3">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
          </form>
        </div>
      </section>
    </Wrapper>
  </Wizard>
</OuterWrapper>"
`;

exports[`Wizard go to the second tab go to next via backend 1`] = `
"<OuterWrapper state={{...}} disabledTabs={false} __childrenCreator={[Function (anonymous)]} intl={{...}}>
  <Wizard wizardState={{...}} disableTabs={false}>
    <Wrapper manager={{...}} tag="section" style={{...}} className="wizard-steps">
      <section style={{...}} className="wizard-steps">
        <WizardTabList wizardState={{...}} disableTabs={false}>
          <TabList tag="div" className="wizard-index">
            <div role="tablist" className="wizard-index">
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label is-accessible" style={{...}} id="tab1" role="tab">
                    <span id="tab1" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab1-panel" className="wizard-index-label is-accessible" style={{...}}>
                      Label1
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={true} className="wizard-index-label is-current is-accessible" style={{...}} id="tab2" role="tab">
                    <span id="tab2" tabIndex={0} onFocus={[Function: bound ]} role="tab" aria-selected={true} aria-controls="tab2-panel" className="wizard-index-label is-current is-accessible" style={{...}}>
                      Label2
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label is-accessible" style={{...}} id="tab3" role="tab">
                    <span id="tab3" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab3-panel" className="wizard-index-label is-accessible" style={{...}}>
                      Label3
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
            </div>
          </TabList>
        </WizardTabList>
        <div className="modal-body">
          <form onSubmit={[Function (anonymous)]}>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab1" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab1-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab1">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab2" active={true} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab2-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={false} aria-describedby="tab2">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab3" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab3-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab3">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
          </form>
        </div>
      </section>
    </Wrapper>
  </Wizard>
</OuterWrapper>"
`;

exports[`Wizard go to the second tab set via next click 1`] = `
"<OuterWrapper state={{...}} disabledTabs={false} __childrenCreator={[Function (anonymous)]} intl={{...}}>
  <Wizard wizardState={{...}} disableTabs={false}>
    <Wrapper manager={{...}} tag="section" style={{...}} className="wizard-steps">
      <section style={{...}} className="wizard-steps">
        <WizardTabList wizardState={{...}} disableTabs={false}>
          <TabList tag="div" className="wizard-index">
            <div role="tablist" className="wizard-index">
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label is-accessible" style={{...}} id="tab1" role="tab">
                    <span id="tab1" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab1-panel" className="wizard-index-label is-accessible" style={{...}}>
                      Label1
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={true} className="wizard-index-label is-current is-accessible" style={{...}} id="tab2" role="tab">
                    <span id="tab2" tabIndex={0} onFocus={[Function: bound ]} role="tab" aria-selected={true} aria-controls="tab2-panel" className="wizard-index-label is-current is-accessible" style={{...}}>
                      Label2
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label is-accessible" style={{...}} id="tab3" role="tab">
                    <span id="tab3" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab3-panel" className="wizard-index-label is-accessible" style={{...}}>
                      Label3
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
            </div>
          </TabList>
        </WizardTabList>
        <div className="modal-body">
          <form onSubmit={[Function (anonymous)]}>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab1" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab1-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab1">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab2" active={true} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab2-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={false} aria-describedby="tab2">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab3" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab3-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab3">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
          </form>
        </div>
      </section>
    </Wrapper>
  </Wizard>
</OuterWrapper>"
`;

exports[`Wizard go to the second tab set via tab click 1`] = `
"<OuterWrapper state={{...}} disabledTabs={false} __childrenCreator={[Function (anonymous)]} intl={{...}}>
  <Wizard wizardState={{...}} disableTabs={false}>
    <Wrapper manager={{...}} tag="section" style={{...}} className="wizard-steps">
      <section style={{...}} className="wizard-steps">
        <WizardTabList wizardState={{...}} disableTabs={false}>
          <TabList tag="div" className="wizard-index">
            <div role="tablist" className="wizard-index">
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label is-accessible" style={{...}} id="tab1" role="tab">
                    <span id="tab1" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab1-panel" className="wizard-index-label is-accessible" style={{...}}>
                      Label1
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={true} className="wizard-index-label is-current is-accessible" style={{...}} id="tab2" role="tab">
                    <span id="tab2" tabIndex={0} onFocus={[Function: bound ]} role="tab" aria-selected={true} aria-controls="tab2-panel" className="wizard-index-label is-current is-accessible" style={{...}}>
                      Label2
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
              <InjectIntl(WizardTab) tab={{...}} widthPercentage={33.333333333333336} disableTabs={false}>
                <WizardTab tab={{...}} widthPercentage={33.333333333333336} disableTabs={false} intl={{...}}>
                  <Tab tag="span" active={false} className="wizard-index-label is-accessible" style={{...}} id="tab3" role="tab">
                    <span id="tab3" tabIndex={-1} onFocus={[Function: bound ]} role="tab" aria-selected={false} aria-controls="tab3-panel" className="wizard-index-label is-accessible" style={{...}}>
                      Label3
                    </span>
                  </Tab>
                </WizardTab>
              </InjectIntl(WizardTab)>
            </div>
          </TabList>
        </WizardTabList>
        <div className="modal-body">
          <form onSubmit={[Function (anonymous)]}>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab1" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab1-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab1">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab2" active={true} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab2-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={false} aria-describedby="tab2">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
            <WizardPanel tab={{...}}>
              <TabPanel tabId="tab3" active={false} className="wizard-step" tag="div">
                <div className="wizard-step" id="tab3-panel" onKeyDown={[Function: bound ]} role="tabpanel" style={{...}} aria-hidden={true} aria-describedby="tab3">
                  <button onClick={[Function: res] { isMobxAction: true }} />
                </div>
              </TabPanel>
            </WizardPanel>
          </form>
        </div>
      </section>
    </Wrapper>
  </Wizard>
</OuterWrapper>"
`;
